--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,11 @@
       "declaration": true,
       "outDir": "./dist",
       "strict": true
-    }
+    },
+    "include": [
+      "ts_project/**/*"
+    ],
+    "exclude": [
+      "node_modules"
+    ]
   }
